Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
None
Description
Looking at the unit tests for the dictionary delta logic – the arrays that are produced by subsequent invocations of Finish yield DictionaryArray instances with partial dictionaries. I think this is misleading (I was surprised to find this while working on ARROW-6861). We should develop a different approach to computing dictionary delta.
Attachments
Issue Links
- links to