ARROW-6869: [C++] Do not return invalid arrays from DictionaryBuilder::Finish when reusing builder. Add "FinishDelta" method and "ResetFull" method

The current behavior is "wrong enough" that adding this to 0.15.1 might not be a bad idea, but we could always leave it for the next major release

Closes #5687 from wesm/ARROW-6869 and squashes the following commits:

21faff6f2 <Wes McKinney> Check indices of results after ResetFull too
aefc7fac3 <Wes McKinney> Code review feedback, fix unit tests
9d6c8ce1e <Wes McKinney> Add unit test for ResetFull
f91600a1b <Wes McKinney> Fix length/null_count/capacity accounting through Reset and AppendIndices in DictionaryBuilder. Disable faulty dictionary delta logic

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>