cpp/src/arrow/array/builder_dict.h
@@ -89,11 +89,7 @@ class ARROW_EXPORT DictionaryMemoTable {
 /// dense array
 ///
 /// Unlike other builders, dictionary builder does not completely
-/// reset the state on Finish calls. The arrays built after the
-/// initial Finish call will reuse the previously created encoding and
-/// build a delta dictionary when new terms occur.
-///
-/// data
+/// reset the state on Finish calls.
 template <typename BuilderType, typename T>
 class DictionaryBuilderBase : public ArrayBuilder {
  public:
@@ -230,10 +226,16 @@ class DictionaryBuilderBase : public ArrayBuilder {
   }
 
   void Reset() override {
+    // Perform a partial reset. Call ResetFull to also reset the accumulated
+    // dictionary values
     ArrayBuilder::Reset();
     indices_builder_.Reset();
+  }
+
+  /// \brief Reset and also clear accumulated dictionary values in memo table
+  void ResetFull() {
+    Reset();
     memo_table_.reset(new internal::DictionaryMemoTable(value_type_));
-    delta_offset_ = 0;
   }
 
   Status Resize(int64_t capacity) override {
@@ -244,28 +246,14 @@ class DictionaryBuilderBase : public ArrayBuilder {
     return Status::OK();
   }
 
-  Status FinishInternal(std::shared_ptr<ArrayData>* out) override {
-    // Finalize indices array
-    ARROW_RETURN_NOT_OK(indices_builder_.FinishInternal(out));
-
-    // Generate dictionary array from hash table contents
-    std::shared_ptr<ArrayData> dictionary_data;
-
-    ARROW_RETURN_NOT_OK(
-        memo_table_->GetArrayData(pool_, delta_offset_, &dictionary_data));
-
-    // Set type of array data to the right dictionary type
-    (*out)->type = type();
-    (*out)->dictionary = MakeArray(dictionary_data);
-
-    // Update internals for further uses of this DictionaryBuilder
-    delta_offset_ = memo_table_->size();
-
-    // ARROW-6861: Manually set capacity/length/null count until we can fix up
-    // Reset to not reset the memo table in ARROW-6869
-    capacity_ = length_ = null_count_ = 0;
-    indices_builder_.Reset();
-
+  /// \brief Return dictionary indices and a delta dictionary since the last
+  /// time that Finish or FinishDelta were called, and reset state of builder
+  /// (except the memo table)
+  Status FinishDelta(std::shared_ptr<Array>* out_indices,
+                     std::shared_ptr<Array>* out_delta) {
+    std::shared_ptr<ArrayData> indices_data;
+    ARROW_RETURN_NOT_OK(FinishWithDictOffset(delta_offset_, &indices_data, out_delta));
+    *out_indices = MakeArray(indices_data);
     return Status::OK();
   }
 
@@ -275,17 +263,45 @@ class DictionaryBuilderBase : public ArrayBuilder {
 
   Status Finish(std::shared_ptr<DictionaryArray>* out) { return FinishTyped(out); }
 
-  /// is the dictionary builder in the delta building mode
-  bool is_building_delta() { return delta_offset_ > 0; }
-
   std::shared_ptr<DataType> type() const override {
     return ::arrow::dictionary(indices_builder_.type(), value_type_);
   }
 
  protected:
+  Status FinishInternal(std::shared_ptr<ArrayData>* out) override {
+    std::shared_ptr<Array> dictionary;
+    ARROW_RETURN_NOT_OK(FinishWithDictOffset(/*offset=*/0, out, &dictionary));
+
+    // Set type of array data to the right dictionary type
+    (*out)->type = type();
+    (*out)->dictionary = dictionary;
+    return Status::OK();
+  }
+
+  Status FinishWithDictOffset(int64_t dict_offset,
+                              std::shared_ptr<ArrayData>* out_indices,
+                              std::shared_ptr<Array>* out_dictionary) {
+    // Finalize indices array
+    ARROW_RETURN_NOT_OK(indices_builder_.FinishInternal(out_indices));
+
+    // Generate dictionary array from hash table contents
+    std::shared_ptr<ArrayData> dictionary_data;
+    ARROW_RETURN_NOT_OK(memo_table_->GetArrayData(pool_, dict_offset, &dictionary_data));
+
+    *out_dictionary = MakeArray(dictionary_data);
+    delta_offset_ = memo_table_->size();
+
+    // Update internals for further uses of this DictionaryBuilder
+    ArrayBuilder::Reset();
+    return Status::OK();
+  }
+
   std::unique_ptr<DictionaryMemoTable> memo_table_;
 
+  // The size of the dictionary memo at last invocation of Finish, to use in
+  // FinishDelta for computing dictionary deltas
   int32_t delta_offset_;
+
   // Only used for FixedSizeBinaryType
   int32_t byte_width_;
 
